kubernetes/alb-controller-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aws-load-balancer-controller
  namespace: kube-system
spec:
  template:
    metadata:
      annotations:
        CapacityProvisioned: "1vCPU 2GB"
    spec:
      containers:
      - name: aws-load-balancer-controller
        resources:
          requests:
            memory: "1Gi"
            cpu: "0.5"
          limits:
            memory: "2Gi"
            cpu: "1"
